k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-generator
spec:
  selector:
    app: log-generator
  ports:
    - port: 80
      targetPort: 80
